--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-   "name": "create-express-stack",
-   "version": "1.0.0",
-   "type": "module",
-   "main": "index.js",
-   "scripts": {
-      "dev": "nodemon index.js"
-   },
-   "license": "ICS",
-   "dependencies": {
-      "@prisma/client": "^5.18.0",
-      "bcryptjs": "^2.4.3",
-      "body-parser": "^1.20.2",
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "jsonwebtoken": "^9.0.2",
-      "morgan": "^1.10.0"
-   },
-   "devDependencies": {
-      "nodemon": "^3.1.3",
-      "prisma": "^5.18.0"
-   }
+  "name": "webgen-cli",
+  "version": "1.0.0",
+  "description": "CLI untuk membuat proyek template menggunakan Python",
+  "main": "index.js",
+  "bin": {
+    "webgen": "./index.js"
+  },
+  "scripts": {
+    "install:python-dependencies": "pip install -r requirements.txt"
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
