--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "bin": {
     "webgen": "./index.js"
   },
-  "scripts": {
-    "install:python-dependencies": "pip install -r requirements.txt"
-  },
+ "scripts": {
+  "webgen": "node index.js",
+  "install:python-dependencies": "pip install -r requirements.txt"
+},
   "dependencies": {},
   "devDependencies": {}
 }
